PyVISA Changelog
================

1.12.0 (unreleased)
-------------------

- fix collection of debug info on the ctypes wrapper PR #598


1.11.3 (07-11-2020)
-------------------

1.11.2 was skipped due to an issue in the MANIFEST file.

- fix MANIFEST to exclude built docs
- fix minor typos in deprecation warning for GPIB resources
- generate some test files on the fly to avoid issue when building conda packages
- add official Python 3.9 support

1.11.1 (30-09-2020)
-------------------

- deprecate methods that were mistakenly added to GPIB::INSTR resources PR #560
- fix the listing of available backends (Also not that we now return the backend
  name as can be used to create a ResourceManger) PR #545
- allow a None value for the board value of a ResourceInfo PR #547
  This allows for funky resource name such ASRL/dev/tty0::INSTR which are common
  in pyvisa-py and avoid returning a completely generic resource in those cases.
- documentation improvements for pyvisa.resources.SerialInstrument PR #558

1.11 (16-09-2020)
-----------------

PyVISA 1.11 introduces a small backward incompatibility in the handling of
the arguments to handlers for VISA events. The old system was tightly linked to
the ctwrapper and not really usable as it was. As a consequence we pass
the contents of the ctypes objects to the handler rather than the bare ctypes
object (with the exception of the user handle for which there is no way to do
it properly). This is a breaking change and if your code is affected you can revert
to the old behavior by setting the environment variable PYVISA_WRAP_HANDLER=0 or
set ctwrapper.WRAP_HANDLER to False but please consider updating to the new
behavior.

PyVISA 1.11 also removes deprecated functions and attributes that were supposed
to be removed  in 1.10:

- `ask`: use `query` instead
- `ask_delay`: use `query_delay`
- `ask_for_values`: use either `query_ascii_values` or `query_binary_values` as relevant